[workspace]


[package]
authors = ["Andrey Kartashov <andrey.kartashov@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "cardiac_monitor"
version = "0.1.0"

[dependencies]

cardiac_monitor_shared = { path = "../shared" }

# can print panic messages but larger
#panic-semihosting = "0.5.3"
panic-halt = "0.2.0"

cortex-m = "0.7.2"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.3.7"

#cortex-m-rtic = "0.6.0"
cortex-m-rtic = { git = "https://github.com/rtic-rs/cortex-m-rtic" }
systick-monotonic = { git = "https://github.com/rtic-rs/systick-monotonic.git" }

embedded-hal = "0.2.6"

embedded-graphics-core = "0.3.3"
embedded-graphics = "0.7.1"

max3010x = "0.1.0"

heapless = "0.7.8"

[dependencies.stm32f1]
version = "0.14.0"
features = ["stm32f107", "rt"]

[dependencies.stm32f1xx-hal]
features = ["rt", "stm32f107", "connectivity"]
git = "https://github.com/stm32-rs/stm32f1xx-hal"
#version = "0.7.0"

[profile.dev]
codegen-units = 1 # better optimizations

# optimize for size ('s' or 'z' would optimize even more)
opt-level = 's'

# enable debugging in dev mode.
debug = true

# link with link time optimization (lto).
# NOTE: setting this to true upsets GDB, there's a bug somewhere
lto = false

[profile.release]

codegen-units = 1 # better optimizations

# optimize for size ('s' or 'z' would optimize even more)
opt-level = 's'

# link with link time optimization (lto).
lto = true

# no debug info
debug = false

# Optimize all the other dependencies
[profile.dev.package."*"]
opt-level = "s"

[profile.release.package."*"]
opt-level = "s"
